# code-prettier

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh
highlighting/: default.json  json.json  language_map.json  rust.json
src/: app.rs  highlighting.rs  language_pattern.rs  logger.rs  main.rs  project_root.rs  tokenizer.rs
test_files/: test.json
